--- a/style.css
+++ b/style.css
@@ -2,9 +2,29 @@
   position: absolute;
   top: 100px;
   left: 50px;
-  width: 200px;
-  height: 200px;
+  width: 300px;
+  height: 80px;
   background-image: url(assets/plane.png);
   background-size: cover;
+}
 
+.hide{
+  display: none;
+}
+
+.gameMessage{
+  position: absolute;
+  top: 10%;
+  left: 20%;
+  width: 60%;
+  text-align: center;
+  background-color: black;
+  color: white;
+  font-size: 4em;
+}
+
+.gameMessage:hover{
+  background-color: black;
+  color: red;
+  cursor: crosshair;
 }
