--- a/style.css
+++ b/style.css
@@ -28,3 +28,21 @@
   color: red;
   cursor: crosshair;
 }
+
+body,
+html {
+  height: 100%;
+}
+
+.bg {
+  /* The image used */
+  background-image: url("assets/game-background.jpg");
+
+  /* Full height */
+  height: 100%;
+
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
