--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-.plane{
+.plane {
   position: absolute;
   top: 100px;
   left: 50px;
@@ -8,40 +8,71 @@
   background-size: cover;
 }
 
-.hide{
+.hide {
   display: none;
 }
 
-.gameMessage{
+.gameMessage {
   position: absolute;
   top: 10%;
-  left: 20%;
-  width: 60%;
+  left: 35%;
+  width: 30%;
   text-align: center;
   background-color: black;
   color: white;
-  font-size: 4em;
+  font-size: 5em;
+  border-radius: 60px;
 }
 
-.gameMessage:hover{
+.gameMessage:hover {
   background-color: black;
-  color: red;
+  color: #79C9F9;
   cursor: crosshair;
+}
+
+.score {
+  background-color: #79C9F9;
+  height: 70px;
+  text-align: center;
+  color: black;
+  font-size: 3em;
+  font-weight: 500;
+  font-family: 'Courier New', Courier, monospace;
+}
+
+.target {
+  position: absolute;
+  bottom: 0px;
+  width: 50px;
+  height: 100px;
+  color: white;
+  background-color: black;
+  text-align: center;
+  font-size: 1.5em;
+}
+
+.bomb {
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  color: white;
+  background-color: black;
+  text-align: center;
+  font-size: 2em;
+
 }
 
 body,
 html {
-  height: 100%;
+  height: 95%;
 }
 
 .bg {
-  /* The image used */
   background-image: url("assets/game-background.jpg");
-
-  /* Full height */
   height: 100%;
-
-  /* Center and scale the image nicely */
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
