--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@
   width: 50px;
   height: 100px;
   color: white;
-  background-color: black;
+  background-image: url(assets/wood-background.jpg);
   text-align: center;
   font-size: 1.5em;
 }
@@ -55,13 +55,12 @@
   position: absolute;
   left: 0px;
   top: 0px;
-  width: 35px;
-  height: 35px;
-  border-radius: 50%;
-  color: white;
-  background-color: black;
-  text-align: center;
-  font-size: 2em;
+  width: 50px;
+  height: 50px;
+  color: black;
+  background-image: url(assets/fire.png);
+  text-align: center; 
+  font-size: 1.5em;
 
 }
 
