--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@
   width: 50px;
   height: 50px;
   color: black;
-  background-image: url(assets/fire.png);
+  background-image: url(assets/fire-2.png);
   text-align: center; 
   font-size: 1.5em;
 
