--- a/style.css
+++ b/style.css
@@ -14,14 +14,15 @@
 
 .gameMessage {
   position: absolute;
-  top: 10%;
+  top: 20%;
   left: 30%;
   width: 40%;
   text-align: center;
   background-color: black;
   color: white;
-  font-size: 5em;
+  font-size: 4em;
   border-radius: 60px;
+  font-family: 'Courier New', Courier, monospace;
 }
 
 .gameMessage:hover {
@@ -84,4 +85,22 @@ html {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  overflow: hidden;
+}
+
+#background-audio {
+  position: absolute;
+  top: 0%;
+  left: 40%;
+  visibility: hidden;
+}
+
+audio::-webkit-media-controls-panel {
+  background-color: #79C9F9;
+}
+
+.button {
+  position: absolute;
+  
+
 }
